manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customerapi
  labels:
    app: customer-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: customerapi
  template:
    metadata:
      labels:
        app: customer-api
        service: customerapi
    spec:
      containers:
        - name: customerapi
          image: acrifsaks.azurecr.io/nla/customerapi:f5005b5ca6cecd92d4dfbc26f58d3d779de22abe
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
